tests/reject/privateMethodValueType.emojic
🐋 🚂 🍇
  🔒 🐖 🙋 🍇
    😀 🔤I’m a fish.🔤
  🍉
🍉

🏁 🍇
  🙋 234
🍉
